--- a/about.html
+++ b/about.html
@@ -58,6 +58,12 @@
         background: #555;
     }
 
+    #heading {
+        background-color: blue;
+        margin-left: 210px;
+        padding: 10px;
+    }
+
     /* Main content styles */
     .content {
             top: 0;
@@ -67,17 +73,15 @@
         }
     </style>
 
-    <h4 class = "content">About Us</h4>
+    <h4 id = "heading">About Us</h4>
 
     <p class = "content">
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam optio veritatis culpa, perferendis odit quaerat cum deleniti quis possimus, animi molestias qui laboriosam recusandae harum doloremque? Placeat quod deserunt tempore?
     </p>
-
-
-    
-
-
-
     
 </body>
+
+<footer>
+    <p class = "content">&copy;2025 Galactic Construction LTD. All rights reserved.</p>
+</footer>
 </html>
